--- a/roles/docker/vars/main.yml
+++ b/roles/docker/vars/main.yml
@@ -1,16 +1,13 @@
 apt_key_urls:
   - "https://download.docker.com/{{ ansible_system|lower }}/{{ ansible_distribution|lower }}/gpg"
-
 apt_repos_list:
-  - "deb [arch=amd64] https://download.docker.com/{{ ansible_system|lower }}/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} stable"
-
+  - "deb [arch={{ 'amd64' if ansible_architecture == 'x86_64' else 'arm64' }}] https://download.docker.com/{{ ansible_system|lower }}/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} stable"
 pkgs:
   - docker-ce
   - docker-ce-cli
   - containerd.io
-
+  - docker-compose-plugin
 docker_compose_version: v2.1.1
-
 docker_users:
   - cdrc
   - askwar
