--- a/roles/general/tasks/editor.yml
+++ b/roles/general/tasks/editor.yml
@@ -9,26 +9,20 @@
     state: absent
   tags: packages
   become: true
-
-- name: Download latest stable version of nvim
-  ansible.builtin.get_url:
-    url: https://github.com/neovim/neovim/releases/download/stable/nvim.appimage
-    dest: /usr/local/bin/nvim.appimage
-    owner: root
-    group: root
-    mode: '0755'
+- name: Install vim
+  ansible.builtin.package:
+    name:
+      - vim
+    state: present
   tags: packages
   become: true
-
-- name: Add nvim alternatives
+- name: Add vim alternatives
   community.general.alternatives:
     link: "/usr/bin/{{ item }}"
     name: "{{ item }}"
-    path: /usr/local/bin/nvim.appimage
+    path: /usr/bin/vim
     priority: 110
   tags: packages
   become: true
   loop:
-    - vim
     - vimdiff
-    - nvim
