--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -30,6 +30,9 @@
 - name: Import tasks - hardening
   ansible.builtin.import_tasks: hardening.yml
 
+- name: Import tasks - unused fs
+  ansible.builtin.import_tasks: remove_unused_fs.yml
+
 - name: Import tasks - chrony
   ansible.builtin.import_tasks: chrony.yml
 
