--- a/roles/general/tasks/hardening.yml
+++ b/roles/general/tasks/hardening.yml
@@ -48,3 +48,16 @@
   assert:
     that:
       - "'755' in permissions_check.stdout"
+
+- name: Remove motd
+  become: true
+  ansible.builtin.file:
+    path: "/etc/motd"
+    state: absent
+
+- name: Ensure rsyslog is running and enabled
+  become: true
+  ansible.builtin.systemd_service:
+    enabled: true
+    state: "started"
+    name: rsyslog
