--- a/.gitignore
+++ b/.gitignore
@@ -453,3 +453,4 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,linux,ansible,visualstudio,visualstudiocode
 
+vault-pass
