--- a/main.yml
+++ b/main.yml
@@ -1,11 +1,15 @@
 ---
-
 - hosts: servers
   gather_facts: true
   roles:
     - general
     - docker
 
+- hosts: gitlab
+  gather_facts: true
+  roles:
+    - general
+    - gitlab
 # - hosts: vpn_hosts
 #   gather_facts: true
 #   roles:
